New version 3.1 of the Delete Fabric Records Add-in
Added a new tool for deleting a selection of connection lines. This code
implements a forward star to trace the downstream connection lines
belonging to the same parcel (see the function TraceFabricLines, and its
use of the IGSForwardStar interface.) The selected connection lines are
deleted. If there are non-connection lines selected, they are not
deleted. If there are any connection lines that are downstream from any
of the selected connection lines, then these are also deleted. This
ensures that there is no instance of connection lines that are
disconnected from the parcel.

--- a/DataReviewAndRepair/DeleteParcelFabricRecords/AddIn_DeleteParcelFabricRecords/SourceCode/DeleteParcelsAndPlans/DeleteFabricRecords.csproj
+++ b/DataReviewAndRepair/DeleteParcelFabricRecords/AddIn_DeleteParcelFabricRecords/SourceCode/DeleteParcelsAndPlans/DeleteFabricRecords.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="ESRI.ArcGIS.ArcCatalog, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="ESRI.ArcGIS.CartoUI, Version=10.0.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
@@ -75,6 +76,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="clsDeleteOrphansTool.cs" />
+    <Compile Include="clsDeleteSelectedConnxLines.cs" />
     <Compile Include="clsDeleteSelectedControl.cs" />
     <Compile Include="clsDeleteSelectedLinePts.cs" />
     <Compile Include="clsPartScanInconsistentRecords.cs" />
@@ -188,6 +190,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgInconsistentRecords.resx">
       <DependentUpon>dlgInconsistentRecords.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgReport.resx">
       <DependentUpon>dlgReport.cs</DependentUpon>
@@ -252,9 +255,6 @@
     <Content Include="Help\Help_files\image005.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Help\Help_files\image006.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Help\Help_files\image007.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -276,13 +276,10 @@
     <Content Include="Help\Help_files\image013.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Help\Help_files\image014.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Help\Help_files\image015.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Help\Help_files\image016.jpg">
+    <Content Include="Help\Help_files\image016.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Help\Help_files\image017.png">
@@ -330,25 +327,13 @@
     <Content Include="Help\Help_files\image031.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Help\Help_files\image032.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Help\Help_files\image033.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Help\Help_files\image034.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Help\Help_files\image035.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Help\Help_files\image036.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Help\Help_files\image037.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Help\Help_files\image038.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Help\Help_files\image039.png">
@@ -366,16 +351,22 @@
     <Content Include="Help\Help_files\image043.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Help\Help_files\image044.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Help\Help_files\image045.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Help\Help_files\image046.png">
+    <Content Include="Help\Help_files\image045.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Help\Help_files\image047.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Help\Help_files\image048.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Help\Help_files\image049.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Help\Help_files\image050.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Help\Help_files\image051.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Help\InvalidFCAssociations.htm">
@@ -507,6 +498,7 @@
     <Content Include="Help\ParcelsWithNoLines_files\props002.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <AddInContent Include="Images\clsDeleteSelectedConnxLines.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Help\Help_files\themedata.thmx">
@@ -544,6 +536,27 @@
     <ZipFileExtension>esriAddIn</ZipFileExtension>
     <AddInTargetProduct>Desktop</AddInTargetProduct>
     <AddInTargetVersion>10.0</AddInTargetVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x86\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
+    <OutputPath>bin\x86\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\ESRI\ESRI.ArcGIS.AddIns.targets" Condition="Exists('$(MSBuildExtensionsPath)\ESRI\ESRI.ArcGIS.AddIns.targets')" />
