--- a/WorkflowUtilities/FabricPointMoveToFeature/Addin_FabricPointMoveToFeature/SourceCode/FabricPointMoveToFeature/FabricPointMoveToFeature.csproj
+++ b/WorkflowUtilities/FabricPointMoveToFeature/Addin_FabricPointMoveToFeature/SourceCode/FabricPointMoveToFeature/FabricPointMoveToFeature.csproj
@@ -95,6 +95,11 @@
       <EmbedInteropTypes>False</EmbedInteropTypes>
       <HintPath>..\..\..\Program Files (x86)\ArcGIS\DeveloperKit10.4\DotNet\ESRI.ArcGIS.Geometry.dll</HintPath>
     </Reference>
+    <Reference Include="ESRI.ArcGIS.GeoSurvey, Version=10.4.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\ArcGIS\DeveloperKit10.4\DotNet\ESRI.ArcGIS.GeoSurvey.dll</HintPath>
+    </Reference>
     <Reference Include="ESRI.ArcGIS.System, Version=10.4.0.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <EmbedInteropTypes>False</EmbedInteropTypes>
