Enhanced error reporting to provide line of code
Enhanced error reporting to provide line of code

--- a/WorkflowUtilities/ParcelEditHelpers/AddIn_ParcelEditHelpers/SourceCode/ParcelEditHelpers/ParcelEditHelper.csproj
+++ b/WorkflowUtilities/ParcelEditHelpers/AddIn_ParcelEditHelpers/SourceCode/ParcelEditHelpers/ParcelEditHelper.csproj
@@ -134,6 +134,7 @@
     <Compile Include="dlgTraverseResults.Designer.cs">
       <DependentUpon>dlgTraverseResults.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExceptionHelper.cs" />
     <Compile Include="LineToCircularCurve.cs" />
     <Compile Include="dlgParcEditHelperOptions.cs">
       <SubType>Form</SubType>
